--- a/webapp/static/assets/css/main.css
+++ b/webapp/static/assets/css/main.css
@@ -2891,7 +2891,7 @@ h1, h2, h3, h4, h5, h6 {
 #header {
   transition: all 0.5s;
   z-index: 997;
-  padding: 20px 0;
+  padding: 1px 0;
 }
 #header.header-scrolled, #header.header-inner-pages {
   background: linear-gradient(42deg, #f70024 0%, #1923e0 100%);
@@ -2908,6 +2908,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #header .logo a {
   color: #fff;
+  font-size: 21px;
 }
 #header .logo img {
   max-height: 51px;
