--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -44,7 +44,7 @@
         <ul>
           
     
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+        
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -63,7 +63,7 @@
       </nav>
     
        <!-- ======= Portfolio Details Section ======= -->
-  <section id="portfolio-details" class="portfolio-details" style="margin-top:10%;">
+  <section id="portfolio-details" class="portfolio-details">
     <div class="container" data-aos="fade-up">
 
       <div class="row gy-4">
@@ -174,7 +174,7 @@
                   
                 </div> -->
                 
-                <div class="alert alert-light" role="alert" style="margin-top: 2%; background-color: transparent; color: white;">
+                <div class="alert alert-light" role="alert" style="margin-top: 2%; background-color: transparent; color: white;  border-color: transparent;">
                   <h5 id="result" style="color: black;"></h5>
                 </div>
                 
