--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -25,7 +25,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
   
-    <title>spam classifier</title>
+    <title>Emotion classifier</title>
 
 </head>
 <body>
@@ -87,20 +87,20 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4" style="margin-top: 8%;">
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: NLP</li>
-              <li><strong>Dataset </strong>: Spam.csv </li>
-              <li><strong>Source Code </strong>: <a href="https://github.com/samrajkodai/Spam-Classifier" style="text-decoration: none;">app.py </a> </li>
+              <li><strong>Dataset </strong>: Emotion.csv </li>
+              <li><strong>Source Code </strong>: <a href="https://github.com/samrajkodai/Emotion-Classifier" style="text-decoration: none;">app.py </a> </li>
               <li><strong>Dataset Source</strong>: <a href="https://www.kaggle.com/datasets" style="text-decoration: none;">Kaggle</a></li>
             </ul>
           </div>
           <div class="portfolio-description">
             <h2>Project Description</h2>
             <p>
-              A spam message classification is a step towards building a tool for scam message identification and early scam detection.so this is one of the project can able to classify the scam messages with the help of Deep learning(LSTM) and Natural Language Processing with 98% accuracy.
+               The aim of this project is to predict the textual emotions which is given as a input and will give the result.
             </p>
           </div>
         </div>
@@ -116,7 +116,7 @@
 
       <div class="section-title">
         <h2>Live Project</h2>
-        <p>A frequently asked questions (FAQ) list is often used in articles, websites, email lists, and online forums where common questions tend to recur, for example through posts or queries by new users related to common knowledge gaps.</p>
+        <p>you can give any input it can able to predict the emotions !!!!!!!!!!!!</p>
       </div>
 
           <div class="row gy-4">
@@ -175,7 +175,7 @@
                 </div> -->
                 
                 <div class="alert alert-light" role="alert" style="margin-top: 2%; background-color: transparent; color: white;  border-color: transparent;">
-                  <h5 id="result" style="color: black;"></h5>
+                  <h5 id="result" style="color: rgb(255, 255, 255); font-size: 26px;"></h5>
                 </div>
                 
               </h3>
