--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -95,12 +95,13 @@
               <li><strong>Dataset </strong>: Emotion.csv </li>
               <li><strong>Source Code </strong>: <a href="https://github.com/samrajkodai/Emotion-Classifier" style="text-decoration: none;">app.py </a> </li>
               <li><strong>Dataset Source</strong>: <a href="https://www.kaggle.com/datasets" style="text-decoration: none;">Kaggle</a></li>
+              <li><strong>Goal</strong>: Detect the user emotions.</li>
             </ul>
           </div>
           <div class="portfolio-description">
             <h2>Project Description</h2>
             <p>
-               The aim of this project is to predict the textual emotions which is given as a input and will give the result.
+               The aim of this project is to predict the textual emotions which is given as a input with help of Natural Language Processing and Machine Learning.
             </p>
           </div>
         </div>
